# aura-test

./: .gitignore  ARCHITECTURE.md  DYNAMIC_FEATURES.md  EXAMPLES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  app.py  env.example  main.py  main_dynamic.py  pyproject.toml  requirements.txt  test_dynamic.py  test_system.py
data/products/: productos_deportes.txt  productos_hogar.csv  productos_tecnologia.json
evaluation/: COMANDOS_UTILES.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  config.py  examples.py  llm_judge.py  report_generator.py  run_evaluation.py  test_orchestrator.py  test_questioner.py  test_rag.py
evaluation/datasets/: test_multiples_scenarios.json  test_one_scenario.json  test_scenarios.json  test_scenarios_pos.json
evaluation/results/: .gitkeep  orchestrator_20251111_185126.json  orchestrator_20251124_162630.json  orchestrator_20251124_165222.json  questioner_20251111_185126.json  questioner_20251124_162630.json  questioner_20251124_165222.json  rag_20251111_185126.json  rag_20251124_153319.json  rag_20251124_162630.json  rag_20251124_165222.json  report_20251111_185126.html  report_20251124_162630.html  report_20251124_165222.html
pages/: Chat.py  Configuración.py
scripts/: setup.py  test_agents.py
src/: config.py  orchestator.py  orchestrator.py  orchestrator_dynamic.py
src/agents/: __init__.py  base_agent.py  dynamic_collector.py  information_collector.py  preference_analyzer.py  questioner.py  recommender.py
src/rag/: document_loader.py  vector_store.py
src/utils/: rate_limiter.py
