[project]
name = "aura"
version = "0.1.0"
description = "Sistema AURA - Agente de Recomendaciones con IA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "huggingface-hub>=0.36.0",
    "langchain>=0.3.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.1",
    "langchain-google-genai>=3.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.50.0",
    "chromadb>=0.6.0",
]
